# openclipboard

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: android-emulator.yml  bindings-smoke.yml  build-artifacts.yml  ci.yml
android/: README.md  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/kotlin/com/openclipboard/: LaunchSmokeTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/openclipboard/: MainActivity.kt  OpenClipboardApp.kt  OpenClipboardAppState.kt  Pairing.kt
android/app/src/main/kotlin/com/openclipboard/core/: CoreHolder.kt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  openclipboard_ime.xml
android/app/src/test/kotlin/com/openclipboard/: ClipboardServiceStateMachineTest.kt  EchoSuppressorTest.kt  OpenClipboardAppStateResetTest.kt  OpenClipboardAppStateTest.kt  PairingTest.kt  UniffiE2ETest.kt
android/gradle/: libs.versions.toml
cli/: Cargo.toml
cli/src/: bench.rs  lib.rs  main.rs
cli/tests/: e2e.rs  e2e_more.rs
core/: Cargo.toml
core/src/: clipboard.rs  discovery.rs  history.rs  identity.rs  lib.rs  mesh.rs  pairing.rs  protocol.rs  quic_transport.rs  replay.rs  session.rs  sync.rs  transport.rs  trust.rs
core/tests/: chaos.rs  history_tests.rs  mesh_sync_tests.rs  persistent_sync.rs  proptest_protocol.rs  quic_loopback.rs  simulation.rs
docs/: protocol-v0.md
ffi/: Cargo.toml  build.rs
ffi/bindings/kotlin/uniffi/openclipboard/: openclipboard.kt
ffi/bindings/swift/: openclipboard.swift  openclipboardFFI.h
ffi/scripts/: generate_bindings.sh
ffi/src/: lib.rs  openclipboard.udl
ffi/tests/: ffi_discovery.rs  ffi_errors.rs  ffi_history.rs  ffi_history_extended.rs  ffi_mesh.rs  ffi_roundtrip.rs  ffi_sync_phase3.rs
macos/: Package.swift  build.sh  sync_bindings.sh
macos/OpenClipboard/: OpenClipboardApp.swift  PairingHelpers.swift  PairingQRWindow.swift  SettingsView.swift  main.swift
macos/OpenClipboardBindings/: openclipboard.swift  openclipboardFFI.h  openclipboardFFI.modulemap
macos/Tests/OpenClipboardTests/: E2ETests.swift  PairingHelpersTests.swift
macos/openclipboardFFI/: dummy.c
macos/openclipboardFFI/include/: openclipboardFFI.h
scripts/: rebuild_all.sh
(+17 files in other folders)
