[package]
name = "openclipboard_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.8.3"
bytes = "1.11.1"
quinn = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
