[package]
name = "openclipboard_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.8.3"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
mdns-sd = "0.12"
quinn = "0.11.9"
rand = "0.8"
rand_core = "0.6"
rcgen = "0.14.7"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
flume = "0.11"
local-ip-address = "0.6"

[dev-dependencies]
rcgen = "0.14.7"
proptest = "1.6.0"
