[package]
name = "openclipboard_ffi"
version = "0.1.0"
edition = "2024"

[lib]
# UniFFI generates language bindings for a shared library.
# Keep rlib so Rust integration tests can link to the crate.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
rand_core = "0.6"
sha2 = "0.10"
uniffi = "0.29.5"
uniffi_bindgen = "0.29.5"
camino = "1.1"
openclipboard_core = { path = "../core" }

[build-dependencies]
uniffi = { version = "0.29.5", features = ["build"] }

[dev-dependencies]
 tempfile = "3"
